--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
         <script src="libraries/p5.js" type="text/javascript"></script>
-        <script src="libraries/p5.min.js" type="text/javascript"></script>
+        <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jDBSCAN.js" type="text/javascript"></script>
         <script src="sketch.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
