--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
     
     <head>
         <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+        <title>auras</title>
         <script src="libraries/p5.js" type="text/javascript"></script>
         <script src="libraries/p5.dom.js" type="text/javascript"></script>
         <script src="libraries/jDBSCAN.js" type="text/javascript"></script>
